add the option to choose a table

--- a/src/sass/partials/_booking.scss
+++ b/src/sass/partials/_booking.scss
@@ -193,6 +193,11 @@
       top: 180px;
     }
   }
+
+  .table.selected {
+    background-color: #78E08F;
+  }
+  
   
   .booking-options {
     @include flex(row, flex-start, space-between);
