--- a/src/sass/partials/_home.scss
+++ b/src/sass/partials/_home.scss
@@ -1,144 +1,231 @@
-// _home.scss
-
 .home-content {
-    display: flex;
-    justify-content: center; /* Wyśrodkowanie boksów */
-    margin-bottom: 5px;
-  }
-  
-  .box {
-    position: relative;
-    width: 300px; /* Ustal szerokość boksów na 300 pikseli */
-    height: 120px; /* Ustal wysokość boksów na 200 pikseli */
-    cursor: pointer;
-    overflow: hidden;
-    transition: transform 0.3s;
-    margin: 0 2.5px; /* Ustaw marginesy po bokach */
-  
-    .home-image {
-      width: 100%; /* Ustal szerokość obrazków na 100% szerokości boksu */
-      height: 100%; /* Ustal wysokość obrazków na 100% wysokości boksu */
-      object-fit: cover; /* Dopasowanie obrazka do kontenera */
-      display: block;
-    }
-  
-    span {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      font-size: 20px;
-      font-weight: bold;
-      text-align: center;
-      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-      transition: transform 0.5s ease-in-out;
-      white-space: nowrap;
-    }
-  
-    &:hover span {
-        transform: translate(-50%, -60%); /* Podnieś napis do góry na hover */
-      }
-  }
-  
-  .opening-hours {
-    background-color: #ff6f61;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-    width: 600px; /* Ustal szerokość na 600 pikseli */
-    height: 120px;
-    margin: 5px auto; /* Dodaj odstęp między blokami i wyśrodkuj poziomo */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5px;
+  margin-top: 70px;
+}
 
-    h3 {
-        font-size: 20px; /* Ustal rozmiar czcionki nagłówka na 20px */
-        margin: 0 0 18px 0;
-      }
-    
-      p {
-        font-size: 15px; /* Ustal rozmiar czcionki tekstu na 5px */
-        margin: 0;
-      }
-  }
-  
-  .carousel {
-    position: relative;
-    overflow: hidden;
+.box {
+  position: relative;
+  width: 300px;
+  height: 120px;
+  cursor: pointer;
+  overflow: hidden;
+  transition: transform 0.3s;
+  margin: 0 2.5px;
+
+  .home-image {
     width: 100%;
-    max-width: 600px; /* Maksymalna szerokość karuzeli */
-    margin: 45px auto; /* Wyśrodkowanie karuzeli na stronie */
-    height: 240px; /* Ustalona wysokość karuzeli */
-    
-    .carousel-item {
-      position: absolute;
-      top: 0;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+  }
+
+  span {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition: transform 0.5s ease-in-out;
+    white-space: nowrap;
+  }
+
+  &:hover span {
+    transform: translate(-50%, -60%);
+  }
+}
+
+.opening-hours {
+  background-color: #ff6f61;
+  color: white;
+  text-align: center;
+  padding: 10px 0;
+  width: 605px;
+  height: 120px;
+  margin: 5px auto;
+  margin-bottom: 70px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  h3 {
+    font-size: 20px;
+    margin: 0 0 18px 0;
+  }
+
+  p {
+    font-size: 15px;
+    margin: 0;
+  }
+}
+
+.carousel {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  max-width: 600px;
+  margin: 45px auto;
+  height: 240px;
+
+  .carousel-inner {
+    display: flex;
+    transition: transform 1s ease-in-out;
+  }
+
+  .carousel-item {
+    min-width: 100%;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding-bottom: 450px;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    transition: left 1s ease-in-out, opacity 1s ease-in-out;
+
+    &.active {
       left: 0;
-      width: 100%;
-      display: flex;
-      justify-content: flex-start; /* Wyśrodkowanie poziome zawartości */
-      align-items: center;
-      opacity: 0;
-      transition: opacity 1s;
-      padding-bottom: 40px; /* Padding wokół zawartości */
-  
-      &.active {
-        opacity: 1;
-        position: relative;
-      }
-  
-      img {
-        width: 190px; /* Szerokość obrazka */
-        height: 190px; /* Wysokość obrazka */
-        object-fit: cover; /* Dopasowanie obrazka */
-        margin-right: 20px; /* Odstęp między obrazkiem a tekstem */
-      }
-  
-      .testimonial-text {
-        text-align: left;
-        max-width: calc(100% - 210px); /* Maksymalna szerokość tekstu, uwzględniająca obrazek i margines */
-        color: #333;
-        
-        h3 {
-          font-size: 20px;
-          margin-bottom: 10px;
-        }
-  
-        p {
-          font-size: 15px;
-          margin-bottom: 10px;
-        }
-  
-        .author {
-          font-size: 0.9rem;
-          font-style: italic;
-        }
-      }
+      opacity: 1;
     }
-  
-    .carousel-indicators {
-      position: absolute;
-      bottom: 10px; /* Pozycja kropek */
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      justify-content: center;
-      gap: 10px; /* Odstęp między kropkami */
-  
-      .indicator {
-        width: 10px;
-        height: 10px;
-        background-color: #ccc;
-        border-radius: 50%;
-        cursor: pointer;
-  
-        &.active {
-          background-color: #333;
-        }
+
+    &.previous {
+      left: -100%;
+      opacity: 0;
+    }
+
+    &.next {
+      left: 100%;
+      opacity: 0;
+    }
+
+    img {
+      width: 190px;
+      height: 190px;
+      object-fit: cover;
+      margin-right: 20px;
+    }
+
+    .testimonial-text {
+      text-align: left;
+      max-width: calc(100% - 210px);
+      color: #333;
+
+      h3 {
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+
+      p {
+        font-size: 15px;
+        margin-bottom: 10px;
+      }
+
+      .author {
+        font-size: 0.9rem;
+        font-style: italic;
       }
     }
   }
-  
+
+  .carousel-indicators {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    .indicator {
+      width: 10px;
+      height: 10px;
+      background-color: #ccc;
+      border-radius: 50%;
+      cursor: pointer;
+
+      &.active {
+        background-color: #333;
+      }
+    }
+  }
+}
+
+#gallery {
+  .gallery-content {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+    margin-bottom: 40px;
+
+    .gallery-item {
+      position: relative;
+      width: 190px;
+      height: 190px;
+      overflow: hidden;
+      transition: transform 0.3s;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+
+      .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        opacity: 0;
+        transition: opacity 0.3s;
+        gap: 15px;
+      }
+
+      .overlay i {
+        color: white;
+        font-size: 0;
+        transition: color 0.3s, transform 0.3s, font-size 0.3s;
+        transform: scale(0.5);
+      }
+
+      .gallery-item:hover .overlay {
+        opacity: 1;
+      }
+
+      .gallery-item:hover .overlay i {
+        font-size: 24px;
+        transform: scale(1);
+      }
+
+      .overlay i:hover {
+        color: #ff6f61;
+      }
+    }
+  }
+
+  .view-more {
+    display: block;
+    text-align: center;
+    margin-top: 20px;
+    color: #ff6f61;
+    text-decoration: none;
+    transition: color 0.3s;
+    margin-bottom: 40px;
+
+    &:hover {
+      color: #d9534f;
+    }
+  }
+}
